--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -35,6 +36,7 @@
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
     <%= javascript_include_tag "application" %>
+    
   </head>
   <body>
 
@@ -45,16 +47,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Bienvenido Instaparking 2</a>
+        <a class="navbar-brand" href=<%= pages_index_path %>>Bscatapp</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+             <%=render 'layouts/menu'%>
           </ul>
         </div>
       </div>
-    </div>
+    </div>    
 
     <div class="container">
       <div class="row">
@@ -67,9 +67,7 @@
             <h3>Sidebar</h3>
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <%=render 'layouts/menu'%>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
@@ -83,3 +81,4 @@
 
   </body>
 </html>
+
