--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,3 +1,6 @@
-<li><%= link_to "Home ", pages_index_path  %></li>
-<li><%= link_to "Contact ", pages_contact_path  %></li>
-<li><%= link_to "Otro link", "http://elcomercio.pe/" %></li>
+<li><%= link_to "Información General ", pages_index_path  %></li>
+<li><%= link_to "Preguntas Frecuentes ", pages_contact_path  %></li>
+<li><%= link_to "Terminos y Condiciones", "http://elcomercio.pe/" %></li>
+<li><%= link_to "Contactos", "http://elcomercio.pe/" %></li>
+<li><%= link_to "Sign In", "http://elcomercio.pe/" %></li>
+<li><%= link_to "Sign Up", "http://elcomercio.pe/" %></li>
