--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Instaparking" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Web Instaparking" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -47,7 +47,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href=<%= pages_index_path %>>Bscatapp</a>
+        <a class="navbar-brand" href=<%= pages_index_path %>>Instaparking</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
              <%=render 'layouts/menu'%>
@@ -64,9 +64,9 @@
         </div>
         <div class="col-lg-3">
           <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
+            <h3>Tabla de Contenidos</h3>
             <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
+              <li class="nav-header">Datos Principales</li>
               <%=render 'layouts/menu'%>
             </ul>
           </div><!--/.well -->
@@ -74,7 +74,7 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2016</p>
+        <p>&copy; NCCV Consulting 2016</p>
       </footer>
 
     </div> <!-- /container -->
