--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -87,7 +87,8 @@ input[type=search] {
 }
 
 body {
-  background-color:#34495e;
+  <!-- Codigo Ivargas 21/05/2016 cambiando el color de fondo de la web-->	
+  background-color:#E0F8EC;
 }
 
 .field {
@@ -131,26 +132,27 @@ body {
 	<header>
 	
 	</header>    
-	<h1></h1>
+	<!--<h1></h1>-->
 	
-        <article class="content">
-        <p> </p>
-        <p> </p>
-        <p> </p>
-        <p> </p>
-        </article>
-        <article class="content">
-        <p> </p>
-        <p> </p>
-        <p> </p>
-        <p> </p>
-        </article>        
-	    <article class="content">
-	        <h2>.</h2>
-            <div class="field" id="searchform">
-              <input type="text" id="searchterm" placeholder="what are you searching for?" />
-              <button type="button" id="search">Find!</button>
-            </div>				
-		</article>	
+ <!--       <article class="content">-->
+ <!--       <p> </p>-->
+ <!--       <p> </p>-->
+ <!--       <p> </p>-->
+ <!--       <p> </p>-->
+ <!--       </article>-->
+ <!--       <article class="content">-->
+ <!--       <p> </p>-->
+ <!--       <p> </p>-->
+ <!--       <p> </p>-->
+ <!--       <p> </p>-->
+ <!--       </article>    -->
+ <!--       #Comentado Ivargas 21/05/2016 03:03 PM-->
+	<!--    <article class="content">-->
+	<!--        <h2>.</h2>-->
+ <!--           <div class="field" id="searchform">-->
+ <!--             <input type="text" id="searchterm" placeholder="what are you searching for?" />-->
+ <!--             <button type="button" id="search">Find!</button>-->
+ <!--           </div>				-->
+	<!--	</article>	-->
 </body>
 </html>
