--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -132,6 +132,51 @@ body {
 	<header>
 	
 	</header>    
+<!--Codigo Ivargas 22/05/2016 11:35 Pm adicionando Carrousel de imagenes-->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <%= image_tag "Cochera1.jpg", html: { alt: "rest_slider1" } %>
+      <div class="carousel-caption">
+        <h3>Cocheras a tu disposicion</h3>
+        <p>Buscador InstaParking</p>
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag "Cochera2.jpg", html: { alt: "rest_slider2" } %>
+      <div class="carousel-caption">
+        <h3>Tu mejor alternativa</h3>
+        <p>Mejor Servicio</p>
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag "Cochera3.jpg", html: { alt: "rest_slider3" }%>
+      <div class="carousel-caption">
+        <h3>Agilidad y Rapidez</h3>
+        <p>Encuentra una cochera especial para ti</p>
+      </div>
+    </div>
+  </div>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<!-- Final Codigo Ivargas 22/05/2016 11:35 Pm adicionando Carrousel de imagenes-->	
+
+
 	<!--<h1></h1>-->
 	
  <!--       <article class="content">-->
