--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,6 +1,9 @@
 <li><%= link_to "Información General ", pages_index_path  %></li>
-<li><%= link_to "Preguntas Frecuentes ", pages_contact_path  %></li>
-<li><%= link_to "Terminos y Condiciones", "http://elcomercio.pe/" %></li>
-<li><%= link_to "Contactos", "http://elcomercio.pe/" %></li>
+<li><%= link_to "Preguntas Frecuentes ", pages_faq_path  %></li>
+<li><%= link_to "Terminos y Condiciones", pages_about_path  %></li>
+<li><%= link_to "Contactos", pages_contact_path  %></li>
 <li><%= link_to "Sign In", "http://elcomercio.pe/" %></li>
 <li><%= link_to "Sign Up", "http://elcomercio.pe/" %></li>
+
+
+<!--<li><%= link_to "Preguntas Frecuentes ", pages_contact_path  %></li>-->
