--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,20 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h2>Terminos y Condiciones</h2>
+
+<p>Agradecemos que uses el producto ofrecido por InstaParking.</p>
+<h4>1.- Acuerdo</h4>
+<p>El uso de nuestrtos servicios implica la aceptación de estas condiciones. Te recomendamos que las leas detenidamente.</p>
+
+<p>Este acuerdo es entre el cliente que ha reservado una plaza de aparcamiento a través de instaparking.com y el propietario u operador del espacio de estacionamiento, que ha sido con licencia. Cada una de las partes y detalles del espacio de estacionamiento y el periodo de licencia propuesto figuran en el correo electrónico de confirmación enviados por instaparking al cliente y el propietario de la finalización de la reserva. Se aplica a todas las reservas.
+El propietario declara y garantiza ques es propietario del espacio de estacionamiento o la persona debidamente autorizada para disponer de licencia del espacio de estacionamiento. Este acuerdo detalla los terminos y condiciones que se aplican entre el cliente y el propietario en relación con la licencia de conducir del espacio de estacionamiento.</p>
+
+
+<p>Instaparking es el agente del propietario para el propósito de este Acuerdo, pero no es el propietario. Este Acuerdo es entre el cliente y el propietario. Instaparking es un tercer beneficiario de este Acuerdo, pero no tendra ninguna obligación para el cliente o el propietario en virtud del presente Acuerdo.</p>
+
+<h4>2.- Reservas y Pago</h4>
+<p>El cliente y el propietario están de acuerdo entre sí para hacer que todas las reservas para el espacio de estacionamiento a través de instaparking y reconocer que instaparking puede manejar la reserva y el proceso de pago en nombre del propietario.
+Todas las reservas y los pagos se realizarán de conformidad con el Acuerdo del cliente y del espacio de estacionamiento, el propietario que todos los pagos realizados a instaparking son recibidas por instaparking como agente del propietario.</p>
+
+
+
+
+<!---<p>Find me in app/views/pages/about.html.erb</p>--->
