--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,2 +1,25 @@
-<h1>Pages#faq</h1>
-<p>Find me in app/views/pages/faq.html.erb</p>
+<h2>Preguntas y Respuestas</h2>
+<h3>En esta sección podra absolver las dudas que pueda tener referente al servicios</h3>
+<br>
+<br>
+
+<h4>¿Puedo utilizar el servicio sin ser usuario?<h4>
+<p>Se necesita de un usuario registrado en la web de InstaParking para poder realizar las busquedas y registros, puedes registrarte de manera gratuita en las opciones de Sign Up, solo completa tus datos y listo.</p>
+<br>
+<h4>¿Que tipo de información muestra la web InstaParking?</h4>
+<p>En InstaParking podemos ofrecerte información sobre lugares de estacionamiento y costos para que puedas obtener la información desde una sola web.</p>
+<br>
+<h4>¿Existe algun costo por el registro como usuario?</h4>
+<p>InstaParking no realiza ningun cobro, nuestra web es totalmente gratuita</p>
+<br>
+<h4>¿Con que datos puedo registrarme en la web?</h4>
+<p>Para darte de Alta en el servicio deberas ingresar un correo valido, una contraseña y tus nombres a fin de poder generar tu acceso.</p>
+<br>
+<h4>¿Cobra alguna comisión por el registro de ofertas de cochera InstaParking?</h4>
+<p>Por el momento no se realiza el cobro de ninguna comision, es totalmente gratuito.</p>
+<br>
+<h4>¿La información ingresada se encuentra a buen recaudo por InstaParking?</h4>
+<p>InstaParking garantiza que los datos ingresados por nuestros usuarios son protegidos y no compartidos con otros, sientase seguro de compartir su información con nosotros.</p>
+<br>
+
+<!--<p>Find me in app/views/pages/faq.html.erb</p>-->
