--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,8 +1,11 @@
     <form action="" method="POST" enctype="multipart/form-data">
-    <input name="action" value="submit" type="hidden"> Your name:<br>
-    <input name="name" size="30" type="text"><br> Your email:<br>
-    <input name="email" size="30" type="text"><br> Your message:<br>
+    <h5>Para una mejor comunicación envianos tus comentarios y/o dudas y gustosamente absolveremos las dudas que puedas tener sobre el servicio.</h5>    
+    <br>
+    <br>
+    <input name="action" value="submit" type="hidden"> Tus Nombres:<br>
+    <input name="name" size="30" type="text"><br> Tu Correo:<br>
+    <input name="email" size="30" type="text"><br> Mensaje:<br>
     <textarea name="message" rows="7" cols="30">
     </textarea><br>
-    <input value="Send email" type="submit">
+    <input value="Enviar Correo" type="submit">
     </form>
