se agrega simple_form,devise y bootstrap

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -4,6 +4,6 @@
 <li><%= link_to "Contactos", pages_contact_path  %></li>
 <li><%= link_to "Sign In", "http://elcomercio.pe/" %></li>
 <li><%= link_to "Sign Up", "http://elcomercio.pe/" %></li>
-
-
+<li><%= link_to "Departments", departments_path %></li>
+<li><%= link_to "Districts", districts_path %></li>
 <!--<li><%= link_to "Preguntas Frecuentes ", pages_contact_path  %></li>-->
