--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,15 @@
 
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
+        <p class="navbar-text navbar-right">
+        <!--@jch-inicio login-->
+        <% if current_user %>
+          Signed in as <a href="#" class="navbar-link"><%= current_user.email %></a>
+        <% else %>
+          <%= link_to "Iniciar Sesion", new_user_session_path %>
+        <% end %>  
+        <!--@jch-fin login-->
+        </p>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
