se ha creado estilo para fondo de la pagina

--- a/app/views/distritos/_form.html.erb
+++ b/app/views/distritos/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @distrito, :html => { :class => "form-horizontal distrito" } do |f| %>
-
+    jaime
     <% if @distrito.errors.any? %>
     <div id="error_expl" class="panel panel-danger">
       <div class="panel-heading">
