--- a/app/views/districts/index.html.erb
+++ b/app/views/districts/index.html.erb
@@ -2,7 +2,9 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
-<table class="table table-striped">
+<style>
+</style>
+<table  class="table table-striped">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
@@ -12,7 +14,7 @@
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-  <tbody>
+  <tbody >
     <% @districts.each do |district| %>
       <tr>
         <td><%= link_to district.id, district_path(district) %></td>
