--- a/app/views/distritos/index.html.erb
+++ b/app/views/distritos/index.html.erb
@@ -2,6 +2,15 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
+<style>
+	tbody {
+	background-color: #799EB7;
+	background-image: url("butterfly.gif");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: right bottom;
+	}
+</style>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -13,7 +22,7 @@
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-  <tbody>
+  <tbody class = "tbody" >
     <% @distritos.each do |distrito| %>
       <tr>
         <td><%= link_to distrito.id, distrito_path(distrito) %></td>
