--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,9 +1,53 @@
-<li><%= link_to "Información General ", pages_index_path  %></li>
-<li><%= link_to "Preguntas Frecuentes ", pages_faq_path  %></li>
-<li><%= link_to "Terminos y Condiciones", pages_about_path  %></li>
-<li><%= link_to "Contactos", pages_contact_path  %></li>
-<li><%= link_to "Sign In", "http://elcomercio.pe/" %></li>
-<li><%= link_to "Sign Up", "http://elcomercio.pe/" %></li>
-<li><%= link_to "Departments", departments_path %></li>
-<li><%= link_to "Districts", districts_path %></li>
-<!--<li><%= link_to "Preguntas Frecuentes ", pages_contact_path  %></li>-->
+<table border="0" width="550px" align="center" cellpadding="10px">
+    <br>
+    <tr>
+        <td>
+            <ul class="nav nav-pills nav-stacked">
+              <li class="active">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Information<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "General information ", pages_index_path  %></li>
+                  <li><%= link_to "Frequent questions ", pages_faq_path  %></li>
+                  <li><%= link_to "Terms and Conditions", pages_about_path  %></li>
+                </ul>    
+              </li>
+            </ul>
+        </td>
+        <td>
+            <ul class="nav nav-pills nav-stacked">
+              <li class="active">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Maintainer<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Departments", departments_path %></li>
+                  <li><%= link_to "Districts", districts_path %></li>
+                </ul>    
+              </li>
+            </ul>
+        </td>
+        
+        <td>
+            <ul class="nav nav-pills nav-stacked">
+              <li class="active">
+                  <%= link_to "Contactos", pages_contact_path  %>
+              </li>
+            </ul>
+        </td>
+
+        <td>
+            <ul class="nav nav-pills nav-stacked">
+              <li class="active">
+                  <%= link_to "Sign In", pages_contact_path  %>
+              </li>
+            </ul>
+        </td>
+        <td>
+            <ul class="nav nav-pills nav-stacked">
+              <li class="active">
+                  <%= link_to "Sign Up", pages_contact_path  %>
+              </li>
+            </ul>
+        </td>        
+        
+                
+    </tr>
+</table>
