--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,12 +15,12 @@
 	<title>Submenús con CSS</title>
 
 </head>
-<body class="body"  >
+<body align="center" class="body"  >
 	<header>
 	
 	</header>    
 <!--Codigo Ivargas 22/05/2016 11:35 Pm adicionando Carrousel de imagenes-->
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div align="center" id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
