Se agrego mantenedores al menur

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -20,8 +20,9 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "Departments", departments_path %></li>
                   <li><%= link_to "Districts", districts_path %></li>
-                  <li><%= link_to "type_users", type_users_path %></li>
+                  <li><%= link_to "type users", type_users_path %></li>
                    <li><%= link_to "profiles", profiles_path %></li>
+                   <li><%= link_to "type garages", type_garages_path %></li>
                   
                 </ul>    
               </li>
