--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for @profile, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :email %>
+ 
+    <%= f.input :email, input_html: { value: current_user.email } %>  
   <%= error_span(@profile[:email]) %>
 
   <%= f.input :name %>
