creacion de mantenedor tipo de alquiler

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -22,6 +22,7 @@
                   <li><%= link_to "Districts", districts_path %></li>
                   <li><%= link_to "type users", type_users_path %></li>
                    <li><%= link_to "profiles", profiles_path %></li>
+                   <li><%= link_to "rent types", rent_types_path %></li>
                    <li><%= link_to "type garages", type_garages_path %></li>
                   
                 </ul>    
