--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -23,6 +23,7 @@
                   <li><%= link_to "type users", type_users_path %></li>
                    <li><%= link_to "profiles", profiles_path %></li>
                    <li><%= link_to "rent types", rent_types_path %></li>
+                   <li><%= link_to "garages", garages_path %></li>
                    <li><%= link_to "type garages", type_garages_path %></li>
                   
                 </ul>    
@@ -48,11 +49,16 @@
         <td>
             <ul class="nav nav-pills nav-stacked">
               <li class="active">
-                  <%= link_to "Sign Up", pages_contact_path  %>
+                  
+                  <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
               </li>
             </ul>
-        </td>        
+        </td>  
+       
         
                 
     </tr>
+    
+
+    
 </table>
