--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -25,6 +25,7 @@
                    <li><%= link_to "rent types", rent_types_path %></li>
                    <li><%= link_to "garages", garages_path %></li>
                    <li><%= link_to "type garages", type_garages_path %></li>
+                   <li><%= link_to "rentins", rentings_path %></li>
                   
                 </ul>    
               </li>
