--- a/app/views/garages/index.html.erb
+++ b/app/views/garages/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:dimension) %></th>
       <th><%= model_class.human_attribute_name(:observation) %></th>
       <th><%= model_class.human_attribute_name(:address) %></th>
@@ -24,6 +25,7 @@
     <% @garages.each do |garage| %>
       <tr>
         <td><%= link_to garage.id, garage_path(garage) %></td>
+        <td><%= garage.name %></td>
         <td><%= garage.dimension %></td>
         <td><%= garage.observation %></td>
         <td><%= garage.address %></td>
