--- a/app/views/garages/show.html.erb
+++ b/app/views/garages/show.html.erb
@@ -4,6 +4,8 @@
 </div>
 
 <dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @garage.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:dimension) %>:</strong></dt>
   <dd><%= @garage.dimension %></dd>
   <dt><strong><%= model_class.human_attribute_name(:observation) %>:</strong></dt>
