--- a/app/views/garages/index.html.erb
+++ b/app/views/garages/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Garage -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>ivan
 </div>
 <table class="table table-striped">
   <thead>
