--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -20,12 +20,13 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "Departments", departments_path %></li>
                   <li><%= link_to "Districts", districts_path %></li>
-                  <li><%= link_to "type users", type_users_path %></li>
-                   <li><%= link_to "profiles", profiles_path %></li>
-                   <li><%= link_to "rent types", rent_types_path %></li>
-                   <li><%= link_to "garages", garages_path %></li>
-                   <li><%= link_to "type garages", type_garages_path %></li>
-                   <li><%= link_to "rentins", rentings_path %></li>
+                  <li><%= link_to "Type Users", type_users_path %></li>
+                   <li><%= link_to "Profiles", profiles_path %></li>
+                   <li><%= link_to "Rent Types", rent_types_path %></li>
+                   <li><%= link_to "Garages", garages_path %></li>
+                   <li><%= link_to "Type Garages", type_garages_path %></li>
+                   <li><%= link_to "Rentings", rentings_path %></li>
+                   <li><%= link_to "Search and Rent", pages_findrenting_path %></li>
                   
                 </ul>    
               </li>
