--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,8 +1,7 @@
 <%= simple_form_for @profile, :html => { :class => 'form-horizontal' } do |f| %>
  
-    <%= f.input :email, input_html: { value: current_user.id } %>  
+  <%= f.input :email, input_html: { value: current_user.email } , :disabled=>true %>  
   <%= error_span(@profile[:email]) %>
-
   <%= f.input :name %>
   <%= error_span(@profile[:name]) %>
   <%= f.input :Documento %>
