--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,8 +6,8 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
   <dd><%= @profile.email %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:Type_profiles) %>:</strong></dt>
-  <dd><%= @profile.Type_profiles %></dd>
+  <!--<dt><strong>%= model_class.human_attribute_name(:Type_profiles) %>:</strong></dt>-->
+  <!--<dd>%= @profile.Type_profiles %></dd>-->
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @profile.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:Documento) %>:</strong></dt>
@@ -16,8 +16,8 @@
   <dd><%= @profile.addr_user %></dd>
   <dt><strong><%= model_class.human_attribute_name(:phone) %>:</strong></dt>
   <dd><%= @profile.phone %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @profile.user_id %></dd>
+  <!--<dt><strong>%= model_class.human_attribute_name(:user_id) %>:</strong></dt>-->
+  <!--<dd>%= @profile.user_id %></dd>-->
   <dt><strong><%= model_class.human_attribute_name(:type_user_id) %>:</strong></dt>
   <dd><%= @profile.type_user_id %></dd>
   <dt><strong><%= model_class.human_attribute_name(:district_id) %>:</strong></dt>
